# clay-foundation-model

./: .gitignore  pyproject.toml  requirements.txt
configs/: segment_kelp.yaml
finetune/segment/: inference.ipynb  make_deepness_onnx.ipynb  make_deepness_onnx.py  make_triton_onnx.py  preprocess_data.py  pskelp_datamodule.py  pskelp_model.py  segment.py
src/: datamodule.py  factory.py
triton_server/: docker-compose.yml  label_planet_pscene_data.py  label_plant_pscene_data.py  segmentation_processor.py  test_triton.ipynb
triton_server/models/kelp_segmentation_ps8b_ensemble/: config.pbtxt
triton_server/models/kelp_segmentation_ps8b_model/: config.pbtxt
triton_server/models/kelp_segmentation_ps8b_preprocessing/: config.pbtxt
