[project]
name = "clay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "einops>=0.8.1",
    "geopandas>=1.1.0",
    "jsonargparse[signatures]>=4.40.0",
    "lightning>=2.5.2",
    "matplotlib>=3.10.3",
    "onnx>=1.18.0",
    "python-box>=7.3.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "segmentation-models-pytorch>=0.5.0",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "torchgeo>=0.7.0",
    "torchmetrics>=1.7.3",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "vit-pytorch>=1.10.1",
    "wandb>=0.20.1",
]
